--- a/_posts/2018-08-18-一道很简单的栈题.md
+++ b/_posts/2018-08-18-一道很简单的栈题.md
@@ -1,11 +1,11 @@
 ---
-title: xman pwn 部分wp
+title: 一道很简单的pwn
 date: 2018-08-18 00:00:00
 categories:
 - CTF/Pwn
 tags:  Pwn
 ---
-##main
+## main
 保护除了nx都没有开
 典型的栈溢出题目
 溢出处主要是
