--- a/_posts/2018-09-15-twctf.md
+++ b/_posts/2018-09-15-twctf.md
@@ -1,12 +1,12 @@
 ﻿---
-title: BBQ
+title: twctf BBQ
 date: 2018-09-15 00:00:00
 categories:
 - CTF/Pwn
 tags:  Pwn
 ---
 
-##bbq
+## bbq
 漏洞点在eat函数那里没有初始化栈指针
 ```
     if ( grridle_list[v2] )
