--- a/_posts/2021-6-25windows 堆分析.md
+++ b/_posts/2021-6-25windows 堆分析.md
@@ -51,7 +51,7 @@ UWP应用程序进程至少包括三个堆：
 
 大体流程
 
-![windows堆分配图一](./asset/windows堆分配图一.png)
+![windows堆分配图一](../assets/post/windows堆分配图一.png)
 
 大体流程就是windows app调用msvcrt140.dll函数中的形如malloc、free等函数后，会调用kernel32.dll中的堆管理api，接着调用ntdll中的管理机制。
 
@@ -333,7 +333,7 @@ struct _HEAP_LIST_LOOKUP
 
 这两个链表之间的关系如下图（摘自angelboy的slide）
 
-![freelist和blockindex](./asset/freelist和blockindex.png)
+![freelist和blockindex](../assets/post/freelist和blockindex.png)
 
 可以看到，所有的chunk都是存储在freelist中，而blockindex用来定位这些在freelist中的chunk的位置，快速找到合适大小的chunk。
 
@@ -407,7 +407,7 @@ struct _HEAP_LIST_LOOKUP
 
 这个结构的话不同版本windows还不一样，贴个图：
 
-![LFHHEAP](./asset/LFHHEAP.png)
+![LFHHEAP](../assets/post/LFHHEAP.png)
 
 这里看win10的就可以
 
@@ -544,7 +544,7 @@ Chunk address >> 4
 
 搞了这么多结构体，头疼眼晕，好在angelboy大佬给出了LFHheap的overview：
 
-![LFHoverview](./asset/LFHoverview.png)
+![LFHoverview](../assets/post/LFHoverview.png)
 
 #### 管理机制
 
