--- a/_posts/2021-7-15-kernel再入门.md
+++ b/_posts/2021-7-15-kernel再入门.md
@@ -13,7 +13,7 @@ SMAP(Supervisor Mode Access Prevention，管理模式访问保护)和SMEP(Superv
 
 smep与smap位于CR4寄存器中。
 
-![cr4](./asset/cr4.png)
+![cr4](../assets/post/cr4.png)
 
 关闭SMEP方法
 修改`/etc/default/grub`文件中的GRUB_CMDLINE_LINUX=""，加上nosmep/nosmap/nokaslr，然后`update-grub`就好。
@@ -167,7 +167,7 @@ echo "[+]Successful"
 
 以core这一题目为例，它的ida解析出来是这样的：
 
-![image-20210908091559268](./asset/ida分析.png)
+![image-20210908091559268](../assets/post/ida分析.png)
 
 这里init_module即为初始化函数，我们跟进去看一下
 
@@ -413,7 +413,7 @@ struct cred {
 >
 > 一个典型的 `Double Fetch` 漏洞原理如下图所示，一个用户态线程准备数据并通过系统调用进入内核，该数据在内核中有两次被取用，内核第一次取用数据进行安全检查（如缓冲区大小、指针可用性等），当检查通过后内核第二次取用数据进行实际处理。而在两次取用数据之间，另一个用户态线程可创造条件竞争，对已通过检查的用户态数据进行篡改，在真实使用时造成访问越界或缓冲区溢出，最终导致内核崩溃或权限提升。
 
-![double-fetch](./asset/double-fetch.png)
+![double-fetch](../assets/post/double-fetch.png)
 
 正如上述文字描述的那样，这一漏洞本质属于race condition，所以要触发这一漏洞需要多线程环境，所以要在启动脚本中加入多线程多核的选项：
 
@@ -743,6 +743,6 @@ void* userfaultfd_leak_handler(void* arg)
 
 内存布局：
 
-![内存布局](./asset/内存布局.png)
+![内存布局](../assets/post/内存布局.png)
 
 利用堆喷射等技术，可以使得一块物理内存被重复映射给了内核和用户。
