--- a/_posts/2021-7-1-qemu学习.md
+++ b/_posts/2021-7-1-qemu学习.md
@@ -12,7 +12,7 @@ QEMU是一种通用的开源计算机仿真器和虚拟器。QEMU共有两种操
 
 当QEMU用作虚拟器时，QEMU的优点在于其实纯软件实现的虚拟化模拟器，几乎可以模拟任何硬件设备，但是也正因为QEMU是纯软件实现的，因此所有指令都需要QEMU转手，因此会严重的降低性能。而可行的办法是通过配合KVM或者Xen来进行加速，目前肯定是以KVM为主。KVM 是硬件辅助的虚拟化技术，主要负责 比较繁琐的 CPU 和内存虚拟化，而 QEMU 则负责 I/O 虚拟化，两者合作各自发挥自身的优势，相得益彰。
 
-![qemu总体图](../assets/post/qemu总体图.png)
+![qemu总体图](https://s3cunda.github.io/assets/post/qemu总体图.png)
 
 从本质上看，虚拟出的每个虚拟机对应 host 上的一个 Qemu 进程，而虚拟机的执行线程（如 CPU 线程、I/O 线程等）对应 Qemu 进程的一个线程。
 
@@ -164,11 +164,11 @@ migrate "exec:cat flag 1>&2"
 
 PCI设备都有一个配置空间（PCI Configuration Space），其记录了关于此设备的详细信息。大小为256字节，其中头部64字节是PCI标准规定的，当然并非所有的项都必须填充，位置是固定了，没有用到可以填充0。前16个字节的格式是一定的，包含头部的类型、设备的总类、设备的性质以及制造商等，格式如下：
 
-![pci设备地址空间](../assets/post/pci设备地址空间.png)
+![pci设备地址空间](https://s3cunda.github.io/assets/post/pci设备地址空间.png)
 
 其中6个BAR（Base Address Register）比较重要，BAR记录了设备所需要的地址空间的类型，基址以及其他属性。
 
-![BAR](../assets/post/BAR.png)
+![BAR](https://s3cunda.github.io/assets/post/BAR.png)
 
 设备可以申请两类地址空间，memory space和I/O space，它们用BAR的最后一位区别开来。
 
