--- a/_posts/2022-1-19-智能合约的JOP后门.md
+++ b/_posts/2022-1-19-智能合约的JOP后门.md
@@ -100,7 +100,7 @@ contract backdoor{
 
 此时我们再跟着debug来一遍，前面的地方都还好，和正常的构造函数一样，但是在revert前会执行这么一个语句：
 
-![image-20220120160745845](../assets/post/image-20220120160745845.png)
+![image-20220120160745845](https://s3cunda.github.io/assets/post/image-20220120160745845.png)
 
 其中的push6b就是构造函数中的6b，也就是说构造函数里面那两句汇编的作用就是直接跳转到6b继续执行。那么6b这个地址是哪里呢？
 
@@ -108,7 +108,7 @@ contract backdoor{
 
 由于evm里的jump指令智能跳转到jumpdest，所以直接跳转到我们的111122223333肯定会revert。那么这次我们将输入的a改成0x5b33333333，再次部署：
 
-![image-20220120161024523](../assets/post/image-20220120161024523.png)
+![image-20220120161024523](https://s3cunda.github.io/assets/post/image-20220120161024523.png)
 
 可以看到这次成功部署，0x33为caller的bytecode。
 
@@ -143,7 +143,7 @@ f3
 
 成功部署，此时我们调用test函数：
 
-![image-20220120162644166](../assets/post/image-20220120162644166.png)
+![image-20220120162644166](https://s3cunda.github.io/assets/post/image-20220120162644166.png)
 
 可以看到，原本应该返回good的test函数被鸠占鹊巢，返回了backdoor的hack。
 
@@ -338,7 +338,7 @@ geth连接本地网络：geth attach <web3provider\>
 
 后门在theAnswerIs函数里：
 
-![image-20220120170621892](../assets/post/image-20220120170621892.png)
+![image-20220120170621892](https://s3cunda.github.io/assets/post/image-20220120170621892.png)
 
 如果正确回答答案（正确答案可以查阅交易历史或者查看storage获取），发送的value大于1ether，且calldatasize等于0xa0时，就会跳转到后门函数。
 
@@ -386,11 +386,11 @@ geth连接本地网络：geth attach <web3provider\>
 
 pop时栈顶为delegatecall的success值，此时jump的地址为0x49d，这个值是在执行JOP逻辑前提前布置在栈内的：
 
-![image-20220120182852582](../assets/post/image-20220120182852582.png)
+![image-20220120182852582](https://s3cunda.github.io/assets/post/image-20220120182852582.png)
 
 此处逻辑如下：
 
-![image-20220120182957134](../assets/post/image-20220120182957134.png)
+![image-20220120182957134](https://s3cunda.github.io/assets/post/image-20220120182957134.png)
 
 可以看到逻辑是将memory的402e处存储的东西存到栈中，然后与0x4b1相加，然后jump（0x4b1来自于theansweris的calldatasize的检查前。）所以需要设置一下delegatecall的返回值，使其跳转到正确的地址结束执行。这里选择98这个地址：
 
