--- a/_posts/2022-1-19-智能合约的JOP后门.md
+++ b/_posts/2022-1-19-智能合约的JOP后门.md
@@ -102,7 +102,7 @@ contract backdoor{
 
 ![image-20220120160745845](https://s3cunda.github.io/assets/post/image-20220120160745845.png)
 
-其中的push6b就是构造函数中的6b，也就是说构造函数里面那两句汇编的作用就是直接跳转到6b继续执行。那么6b这个地址是哪里呢？
+其中的push6b就是构造函数中的78，也就是说构造函数里面那两句汇编的作用就是直接跳转到6b继续执行。那么6b这个地址是哪里呢？
 
 其实这个很好猜，就是我们输入的构造函数参数在code里面的偏移。
 
